--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
+    "chalk": "^4.1.2",
+    "clear": "^0.1.0",
     "discord-player": "^6.6.6",
     "discord.js": "^14.14.1",
     "ffmpeg": "^0.0.4",
+    "figlet": "^1.7.0",
     "libsodium-wrappers": "^0.7.13",
     "play-dl": "^1.9.7",
     "ytdl-core": "^4.11.5"
