--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "Bot de música para el servidor",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "Sergio Lara Mantas",
   "license": "ISC",
+  "devDependencies": {
+    "eslint": "^9.7.0",
+    "nodemon": "^3.1.4"
+  },
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
     "chalk": "^4.1.2",
     "clear": "^0.1.0",
     "discord-player": "^6.6.6",
+    "discord-player-youtubei": "^1.2.0-beta.3",
     "discord.js": "^14.14.1",
     "ffmpeg": "^0.0.4",
     "figlet": "^1.7.0",
     "libsodium-wrappers": "^0.7.13",
+    "mediaplex": "^0.0.9",
     "play-dl": "^1.9.7",
     "ytdl-core": "^4.11.5"
-  },
-  "devDependencies": {
-    "eslint": "^8.54.0",
-    "nodemon": "^3.0.1"
   }
 }
